Fixing More Issues with Responsiveness
headshot-cropped.JPG would be extremely large on some computers, switched back to grid in order to allow for a fixed size for the picture within the pic-div. I’m also converting the font sizes for all the text content relative to either the root element, or its parent element to allow for a responsive webpage. I first tinkered with the #myname div, then adjusted its child elements. I then went on to do the same for the other elements, like the #about-me text, #intro-text, and #bottom-div contents

--- a/portfolio.css
+++ b/portfolio.css
@@ -1,9 +1,22 @@
+html
+{
+    font-size: 16px;
+}
+
 *
 {
     margin-top: 0px;
     margin-bottom: 0px;
     font-family: 'Roboto Slab', 'Roboto', 'sans-serif';
     text-decoration: none;
+}
+
+body
+{
+    padding-left: 1.1em;
+    padding-right: 1.1em;
+    margin-top: 0.7rem;
+    margin-bottom: 0.7rem;
 }
 
 h1
@@ -14,15 +27,12 @@ h1
 
 p
 {
-    line-height: 2em;
+    line-height: 1.5rem;
 }
 
-body
+li
 {
-    padding-left: 1.1em;
-    padding-right: 1.1em;
-    margin-top: 0.7rem;
-    margin-bottom: 0.7rem;
+    line-height: 2rem;
 }
 
 #header-div
@@ -42,12 +52,14 @@ body
     font-family: 'Roboto Slab';
     margin-bottom: 30px;
     text-align: center;
+    font-size: 1rem;
 }
 
 #name
 {
     color: rgba(71,92,154,255);
     transition: color 0.15s;
+    font-size: 2rem;
 }
 
 #name:hover
@@ -65,7 +77,7 @@ body
 {
     display: block;
     color: rgba(162,202,252,255);
-    font-size: 18px;
+    font-size: 1rem;
     transition: color 0.15s;
 }
 
@@ -85,7 +97,7 @@ body
     display: block;
     color: rgba(162,202,252,255);
     display: inline;
-    font-size: 14px;
+    font-size: 0.75rem;
 }
 
 #program:hover, #discipline:hover
@@ -102,7 +114,6 @@ body
 
 #intro-div
 {
-    column-gap: 1.5em;
     margin-bottom: 2rem;
 }
 
@@ -199,18 +210,18 @@ body
 
 #bottom-div
 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 0.25fr 1fr;
+    column-gap: 0.69rem;
     margin-bottom: 2rem;
+    align-self: center;
 }
+
 
 #pic-div
 {
     width: 100%;
     height: 100%;
-    max-height: 200px;
 }
 
 .links
@@ -238,7 +249,8 @@ body
 {
     object-fit: cover;
     object-position: 55% 80%;
-    min-width: 110px;
+    min-width: 80px;
+    height: 100%;
     max-height: 200px;
 }
 
@@ -252,7 +264,7 @@ body
 {
     text-align: center;
     font-weight: bold;
-    font-size: 0.7em;
+    font-size: 0.75rem;
 }
 
 #modified-text-style
